[gd_scene load_steps=5 format=3 uid="uid://cctfi18ju7m2w"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_48syh"]
[ext_resource type="Theme" uid="uid://dlrca21g6xugd" path="res://assets/buttonTheme.tres" id="2_b2s04"]
[ext_resource type="Script" path="res://scripts/properties.gd" id="2_ro366"]

[sub_resource type="Theme" id="Theme_u2afu"]
default_font_size = 16

[node name="main" type="Control" node_paths=PackedStringArray("canvas")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48syh")
canvas = NodePath("canvas")

[node name="canvas" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 32.0
offset_right = 994.0
offset_bottom = 524.0
color = Color(0.374139, 0.374139, 0.374139, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(117, 512)
layout_mode = 0
offset_top = 32.0
offset_right = 117.0
offset_bottom = 544.0
vertical_scroll_mode = 0

[node name="addObj" type="Button" parent="."]
layout_mode = 0
offset_top = 524.0
offset_right = 32.0
offset_bottom = 555.0
theme = ExtResource("2_b2s04")
text = "+"

[node name="properties" type="Control" parent="." node_paths=PackedStringArray("nameTextBox", "uidTextBox", "editScriptButton", "objTypeBox")]
anchors_preset = 0
offset_top = 32.0
offset_right = 40.0
offset_bottom = 72.0
script = ExtResource("2_ro366")
nameTextBox = NodePath("name")
uidTextBox = NodePath("UID")
editScriptButton = NodePath("editScript")
objTypeBox = NodePath("objType/objType")

[node name="name" type="TextEdit" parent="properties"]
layout_mode = 0
offset_left = 994.0
offset_top = 32.0
offset_right = 1152.0
offset_bottom = 67.0
placeholder_text = "Name"

[node name="UID" type="TextEdit" parent="properties"]
layout_mode = 0
offset_left = 994.0
offset_top = 457.0
offset_right = 1152.0
offset_bottom = 492.0
theme = SubResource("Theme_u2afu")
text = "1234-1234-1234"
placeholder_text = "UID"
editable = false

[node name="editScript" type="Button" parent="properties"]
layout_mode = 0
offset_left = 994.0
offset_top = 359.0
offset_right = 1152.0
offset_bottom = 390.0
theme = ExtResource("2_b2s04")
text = "Edit script"

[node name="delete" type="Button" parent="properties"]
layout_mode = 0
offset_left = 994.0
offset_top = 398.0
offset_right = 1152.0
offset_bottom = 429.0
theme = ExtResource("2_b2s04")
text = "Delete object"

[node name="objType" type="Control" parent="properties"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="text" type="Label" parent="properties/objType"]
layout_mode = 0
offset_left = 994.0
offset_top = 96.0
offset_right = 1152.0
offset_bottom = 119.0
text = "Object type"
horizontal_alignment = 1

[node name="objType" type="OptionButton" parent="properties/objType"]
layout_mode = 0
offset_left = 994.0
offset_top = 120.0
offset_right = 1152.0
offset_bottom = 146.0
item_count = 2
popup/item_0/text = "block"
popup/item_1/text = "spike"
popup/item_1/id = 1

[node name="Topbar" type="Control" parent="."]
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 32.0

[node name="compile" type="Button" parent="Topbar"]
layout_mode = 0
offset_left = 1080.0
offset_right = 1152.0
offset_bottom = 31.0
theme = ExtResource("2_b2s04")
text = "Compile"

[node name="edit_global_script" type="Button" parent="Topbar"]
layout_mode = 0
offset_left = 90.0
offset_right = 227.0
offset_bottom = 31.0
theme = ExtResource("2_b2s04")
text = "Edit global script"

[node name="saveButton" type="Button" parent="Topbar"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 31.0
theme = ExtResource("2_b2s04")
text = "Save"

[node name="loadButton" type="Button" parent="Topbar"]
layout_mode = 0
offset_left = 44.0
offset_right = 90.0
offset_bottom = 31.0
theme = ExtResource("2_b2s04")
text = "Load
"

[connection signal="pressed" from="addObj" to="." method="_on_button_pressed"]
[connection signal="pressed" from="properties/editScript" to="properties" method="_on_edit_script_pressed"]
[connection signal="item_selected" from="properties/objType/objType" to="properties" method="_on_obj_type_item_selected"]
[connection signal="pressed" from="Topbar/compile" to="." method="_on_compile_pressed"]
[connection signal="pressed" from="Topbar/edit_global_script" to="." method="_on_edit_global_script_pressed"]
[connection signal="pressed" from="Topbar/saveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Topbar/loadButton" to="." method="_on_load_button_pressed"]
